# ods

./: .gitignore  Cargo.toml  README.md  flake.nix  ods.json  publisher.toml
Formula/: ods.rb
src/: error.rs  generate.rs  main.rs
src/generate/: mod.rs  tests.rs
src/lint/: mod.rs  tests.rs
src/lint/rules/: macro_def.rs  mod.rs  needs_description.rs  needs_explicit_sources.rs  needs_source_description.rs
src/schema/: mod.rs  spec.rs
tests/: generate.rs  lint.rs  lint_rules.rs
tests/fixtures/generate/: basic.yaml
tests/fixtures/generate/folder/: plan.yaml
tests/fixtures/lint/basic/: bad.yaml  good.yaml
tests/fixtures/lint/change_levels/: error.yaml  off.yaml  warn.yaml
tests/fixtures/lint/rules/needs_description/: basic.yaml
tests/fixtures/lint/rules/needs_explicit_sources/: basic.yaml
tests/fixtures/lint/rules/needs_source_description/: basic.yaml
tests/fixtures/plans/: basic.yaml
tests/snapshots/generate/non_existent/: stderr.txt
tests/snapshots/lint/change_levels/: stdout.txt
tests/snapshots/lint/empty.yaml/: stderr.txt
tests/snapshots/lint/files_non_existent/: stderr.txt
tests/snapshots/lint/files_outside_plan/: stderr.txt
tests/snapshots/lint/non_existent/: stderr.txt
tests/snapshots/lint/rules/: needs_description.txt  needs_explicit_sources.txt  needs_source_description.txt
