[package]
name    = "ods"
version = "0.0.1"

authors     = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
description = "CLI for Open Data Schema"
homepage    = "https://github.com/open-data-schema/ods"
repository  = "https://github.com/open-data-schema/ods"

edition      = "2021"
rust-version = "1.79.0"

categories = ["command-line-utilities"]
license    = "MIT"
readme     = "README.md"

[dependencies]
anstream            = "0.6.4"
clap                = { version = "4.4.7", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.1.0"
colorchoice-clap    = "1.0.3"
heck                = "0.5.0"
indexmap            = "2.5.0"
owo-colors          = "3.5.0"
paste               = "1.0.15"
proc-exit           = "2.0.1"
serde               = { version = "1.0.210", features = ["derive"] }
serde_json          = "1.0.128"
serde_yml           = "0.0.12"
thiserror           = "1.0.39"
tracing             = "0.1.37"
tracing-log         = { version = "0.1.3", default-features = false, features = ["log-tracer", "std"] }
tracing-subscriber  = "0.3.16"

[dev-dependencies]
snapbox = { version = "0.6.17", features = ["dir", "term-svg"] }
tryfn   = "0.2.3"

[[bin]]
name = "ods"
path = "src/main.rs"

[[test]]
harness = false
name    = "lint_rules"

[profile.release]
codegen-units = 1
lto           = "thin"
strip         = true

[profile.release-opt-size]
inherits  = "release"
lto       = true
opt-level = "z"
panic     = "abort"

[workspace.metadata.workspaces]
no_individual_tags = true
